src/test/ui/pattern/bindings-after-at/nested-type-ascription-syntactically-invalid.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `=`, found `@`
  --> $DIR/nested-type-ascription-syntactically-invalid.rs:20:15
   |
LL |     let a: u8 @ b = 0;
   |               ^ expected one of 7 possible tokens

error: expected one of `)`, `,`, `@`, or `|`, found `:`
  --> $DIR/nested-type-ascription-syntactically-invalid.rs:26:15
   |
LL |     let a @ (b: u8);
   |               ^ expected one of `)`, `,`, `@`, or `|`

error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `=`, found `)`
  --> $DIR/nested-type-ascription-syntactically-invalid.rs:26:19
   |
LL |     let a @ (b: u8);
   |                   ^ expected one of 7 possible tokens

error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `=`, found `@`
  --> $DIR/nested-type-ascription-syntactically-invalid.rs:33:15
   |
LL |     let a: T1 @ Outer(b: T2);
   |               ^ expected one of 7 possible tokens

warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/nested-type-ascription-syntactically-invalid.rs:4:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 4 previous errors

